--- a/Client/package.json
+++ b/Client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.27",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
