--- a/Client/package.json
+++ b/Client/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.27",
@@ -24,13 +24,13 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
